# llm-hierarchical-design

./: README.md  main.py  pyproject.toml
conversation_tree/: conversation.py  llm_interface.py  main.py
src/: conversation.py  llm_interface.py
tests/: test_conversation.py  test_llm_interface.py
