[project]
name = "llm-hierarchical-design"
version = "0.1.0"
description = "LLM Hierarchical Design is a project that uses a LLM to facilitate tree-like conversations for project structuring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.58.1",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
]
